@@ -55,7 +55,7 @@ public:
 	Glib::ustring copied_partition_path ; //for copy operation..
 
 private:
-	void Insert_Unallocated( std::vector<Partition> & partitions, Sector start, Sector end );
+	void Insert_Unallocated( std::vector<Partition> & partitions, Sector start, Sector end, bool inside_extended );
 	int Get_Index_Original( std::vector<Partition> & partitions ) ;
 	
 	void Apply_Delete_To_Visual( std::vector<Partition> & partitions );
