@@ -1,5 +1,12 @@
 2004-12-12 Bart Hakvoort  <gparted@users.sf.net>
 
+	* include/GParted_Core.h,
+	  src/GParted_Core.cc: modified layoutscan a bit for improved handling of metadata.
+	* include/Operation.h,
+	  src/Operation.cc: modified Insert_Unallocated() to prevent potential crasher.
+
+2004-12-12 Bart Hakvoort  <gparted@users.sf.net>
+
 	* The fixes from 12-09 unearthed a number of long forgotten issues and annoyances. Hopefully they're all resolved now.
 
 2004-12-09 Bart Hakvoort  <gparted@users.sf.net>
